Move of event information from vscphelper to its own file vscpeventhelper now compiles everywhere (Linux/windows)

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -33,7 +33,7 @@ DESTDIR =
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-CANALD_OBJECTS =  vscpd.o ../../common/daemonvscp.o ../../common/clientlist.o ../../common/controlobject.o ../../common/devicelist.o ../../common/vscphelper.o ../../common/tcpipclientthread.o ../../common/dm.o ../../common/vscpvariable.o ../../common/interfacelist.o ../../common/userlist.o ../../common/devicethread.o ../../common/vscptcpif.o ../../common/guid.o ../../../common/dllist.o ../../../common/configfile.o ../../../common/crc.o ../../../common/md5.o ../../../common/randPassword.o       	
+CANALD_OBJECTS =  vscpd.o ../../common/daemonvscp.o ../../common/clientlist.o ../../common/controlobject.o ../../common/devicelist.o ../../common/vscphelper.o ../../common/vscpeventhelper.o ../../common/tcpipclientthread.o ../../common/dm.o ../../common/vscpvariable.o ../../common/interfacelist.o ../../common/userlist.o ../../common/devicethread.o ../../common/vscptcpif.o ../../common/guid.o ../../../common/dllist.o ../../../common/configfile.o ../../../common/crc.o ../../../common/md5.o ../../../common/randPassword.o       	
 
 ### Targets: ###
 
