Added expat lib

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ src/vscp/uvscpd/nbproject/private/launcher.properties
 /src/vscp/build-VSCPWorksPlus-Desktop_Qt_5_2_1_MSVC2010_32bit-Debug/Makefile.Release
 /src/vscp/utils/vscp_bootloader/build-vscp_bootloader-Desktop_Qt_5_2_1_MSVC2010_32bit-Debug/Makefile.Debug
 /src/vscp/utils/vscp_bootloader/build-vscp_bootloader-Desktop_Qt_5_2_1_MSVC2010_32bit-Debug/Makefile.Release
+/src/vscp/daemon/win32/vscpd_vc2010.sdf
+/src/vscp/daemon/win32/vscpd_vc2010.suo
